# Cpp-Tensor-Engine

./: .gitignore  CMakeLists.txt  Dockerfile
examples/: main.cpp
include/nn/: linear.hpp
include/ops/: act_ops.hpp  math_ops.hpp
include/tensor/: tensor.hpp
src/nn/: linear.cpp
src/ops/: act_ops.cpp  math_ops.cpp
src/tensor/: tensor.cpp
